@@ -2,13 +2,13 @@ Package: bnlearn
 Type: Package
 Title: Bayesian Network Structure Learning, Parameter Learning and
         Inference
-Version: 4.7
-Date: 2021-09-06
+Version: 4.7.1
+Date: 2022-03-31
 Depends: R (>= 3.3.0), methods
 Suggests: parallel, graph, Rgraphviz, igraph, lattice, gRain (>=
         1.3-3), ROCR, Rmpfr, gmp
 Author: Marco Scutari [aut, cre], Tomi Silander [ctb], Robert Ness [ctb]
-Maintainer: Marco Scutari <marco.scutari@gmail.com>
+Maintainer: Marco Scutari <scutari@bnlearn.com>
 Description: Bayesian network structure learning, parameter learning and inference.
   This package implements constraint-based (PC, GS, IAMB, Inter-IAMB, Fast-IAMB, MMPC,
   Hiton-PC, HPC), pairwise (ARACNE and Chow-Liu), score-based (Hill-Climbing and Tabu
@@ -25,6 +25,6 @@ URL: https://www.bnlearn.com/
 License: GPL (>= 2)
 LazyData: yes
 NeedsCompilation: yes
-Packaged: 2021-09-06 16:45:03 UTC; fizban
+Packaged: 2022-03-31 01:50:09 UTC; fizban
 Repository: CRAN
-Date/Publication: 2021-09-06 17:30:05 UTC
+Date/Publication: 2022-03-31 08:30:09 UTC
