@@ -1,3 +1,4 @@
+#define USE_FC_LEN_T
 #include <R.h>
 #include <Rinternals.h>
 #include <Rmath.h>
